Fixed data_manager and basic model

--- a/05_basic_model.ipynb
+++ b/05_basic_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,8 +55,7 @@
     "\n",
     "\n",
     "    def forward(self, x):\n",
-    "        import pdb; pdb.set_trace()\n",
-    "        loss = self.model(x['input_ids'], attention_mask=x['attention_mask'], labels=x['input_ids'])[0]\n",
+    "        loss = self.model(x['input_ids'], attention_mask=x['attention_mask'], labels=x['labels'])[0]\n",
     "        return loss\n",
     "\n",
     "    def training_step(self, batch, batch_idx):\n",
@@ -110,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
