--- a/06_data_manager.ipynb
+++ b/06_data_manager.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     "    def prepare_ds(self, split):\n",
     "        tokenizer = GPT2Tokenizer.from_pretrained(self.run_params.model)\n",
     "        tokenizer.pad_token = tokenizer.eos_token \n",
-    "        split = f'{split}[:{self.run_params.batch_size if self.run_params.debug else f\"{self.run_params.data_set_percentage}%\"}]'\n",
+    "        split = f'{split}[:{self.run_params.batch_size*self.block_size if self.run_params.debug else f\"{self.run_params.data_set_percentage}%\"}]'\n",
     "        ds = load_dataset('text', data_files=self.run_params.data_files, split=split)\n",
     "        ds = ds.map(self.tokenize, batched=True, num_proc=4, remove_columns=['text'], fn_kwargs={'tokenizer':tokenizer})\n",
     "        ds = ds.map(\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "tags": []
    },
@@ -122,12 +122,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "baf23b059ec04393b60fa718ea318dec",
+       "model_id": "4b1b0f08cd184899b65378a417197976",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=1.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=2.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -161,12 +161,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4fcfca3572df44d4bccd3763fe1dbb10",
+       "model_id": "391891ba392144f49450f247f14d868a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=1.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=2.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "           262,  1621,  4539, 10730,   284,   262,   717,   983])}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
