--- a/08_database_proxy.ipynb
+++ b/08_database_proxy.ipynb
@@ -64,7 +64,8 @@
     "    conn = None\n",
     "    def __init__(self):\n",
     "        try:\n",
-    "            self.conn = sqlite3.connect('./data/db/wiki_data.db')\n",
+    "            self.properties_dict = properties()\n",
+    "            self.conn = sqlite3.connect(\"/data/db/wiki_data.db\")\n",
     "            print(self.conn)\n",
     "        except Exception as e:\n",
     "            print(e)\n",
@@ -234,7 +235,7 @@
     "            return None\n",
     "        return relation_label.iloc[0][\"label\"]\n",
     "\n",
-    "    def get_relation_string(self, property_id, related_entity_id):\n",
+    "    def get_property_string(self, property_id, related_entity_id):\n",
     "        \"\"\"\n",
     "        :param property_id:\n",
     "        :type property_id: string\n",
@@ -249,13 +250,14 @@
     "        try:\n",
     "            # entity_label = get_entity_label(entity_id)\n",
     "            related_entity_label = self.get_entity_by_id(related_entity_id)\n",
-    "            property_name = property_dict[property_id]\n",
+    "            property_name = self.properties_dict[property_id]\n",
+    "            print(related_entity_label, property_name)\n",
     "        except Exception as e:\n",
     "            print(e)\n",
     "            self.exit_procedure()\n",
-    "        if entity_label is None or related_entity_label is None or property_name is None:\n",
+    "        if related_entity_label is None or property_name is None:\n",
     "            return None\n",
-    "        return \"{}: {}\".format(property_name, related_entity_label)"
+    "        return property_name, related_entity_label"
    ]
   },
   {
@@ -326,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
