Improved return of entity properties

--- a/08_database_proxy.ipynb
+++ b/08_database_proxy.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
     "            # entity_label = get_entity_label(entity_id)\n",
     "            related_entity_label = self.get_entity_by_id(related_entity_id)\n",
     "            property_name = self.properties_dict[property_id]\n",
-    "            print(related_entity_label, property_name)\n",
+    "            # print(related_entity_label, property_name)\n",
     "        except Exception as e:\n",
     "            print(e)\n",
     "            self.exit_procedure()\n",
@@ -269,14 +269,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query tool : 0.006980180740356445\n",
+      "<sqlite3.Connection object at 0x7f8cc3ba1210>\n",
+      "Query tool : 0.022501468658447266\n",
       "<class 'list'>\n",
       "[['Q5573861', 'Stephen Curry', 'Australian comedian and actor'], ['Q16167386', 'Stephen Curry', 'Wikimedia disambiguation page'], ['Q352159', 'Stephen Curry', 'American basketball player']]\n"
      ]
@@ -294,22 +295,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Q11571', 'Cristiano Ronaldo', 'Portuguese association football player']]\n"
+      "<sqlite3.Connection object at 0x7f8cc3ba1210>\n",
+      "[['Q4909106', 'Bill Gates', 'American frontiersman'], ['Q1181671', 'Bill Gates', 'Wikimedia disambiguation page'], ['Q5284', 'Bill Gates', 'American business magnate and philanthropist']]\n"
      ]
     }
    ],
    "source": [
     "wiki = WikiDatabase()\n",
-    "result = wiki.get_entity_by_label('Cristiano Ronaldo')\n",
+    "result = wiki.get_entity_by_label('Bill Gates')\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('mother', 'Mary Maxwell Gates')\n",
+      "('place of birth', 'Seattle')\n",
+      "('spouse', 'Melinda Gates')\n",
+      "('occupation', 'entrepreneur')\n",
+      "('country of citizenship', 'United States of America')\n",
+      "('employer', 'Bill & Melinda Gates Foundation')\n",
+      "('educated at', 'Lakeside School')\n",
+      "(\"topic's main category\", 'Category:Bill Gates')\n",
+      "('instance of', 'human')\n",
+      "('residence', 'Medina')\n",
+      "('award received', 'Knight Commander of the Order of the British Empire')\n",
+      "('described by source', 'Lentapedia (full versions)')\n",
+      "('given name', 'William')\n",
+      "('position held', 'chief executive officer')\n",
+      "('family name', 'Gates')\n",
+      "('child', 'Jennifer Katherine Gates')\n",
+      "('ethnic group', 'Scotch-Irish Americans')\n",
+      "('member of', 'American Academy of Arts and Sciences')\n",
+      "('vehicle normally used', 'Porsche 959')\n",
+      "('languages spoken, written or signed', 'English')\n",
+      "('sex or gender', 'male')\n",
+      "('owner of', 'Microsoft')\n",
+      "('present in work', 'iSteve')\n",
+      "('writing language', 'English')\n",
+      "('sport', 'contract bridge')\n",
+      "('handedness', 'left-handedness')\n",
+      "('father', 'William H. Gates Jr.')\n",
+      "None\n",
+      "None\n",
+      "('sibling', 'Kristianne Gates')\n",
+      "('participant in', 'commencement at the Harvard University')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for property_r in wiki.get_entity_properties('Q5284'): \n",
+    "    print(wiki.get_property_string(property_r[0], property_r[1]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
