Test 7 is runnign

--- a/02_statement_classifer.ipynb
+++ b/02_statement_classifer.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -37,10 +37,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f8eba2e5050>"
+       "<IPython.lib.display.IFrame at 0x7fb8b418d790>"
       ]
      },
-     "execution_count": null,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
