--- a/06_data_manager.ipynb
+++ b/06_data_manager.ipynb
@@ -42,14 +42,14 @@
     "class DataManager():\n",
     "    def __init__(self, run_params):\n",
     "        self.run_params = run_params\n",
+    "        self.tokenizer = GPT2Tokenizer.from_pretrained(self.run_params.model)\n",
+    "        self.tokenizer.pad_token = self.tokenizer.eos_token \n",
     "    # Load, Tokenize, and Augment data\n",
     "    def prepare_data(self):\n",
     "        train_ds, val_ds = map(self.prepare_ds, ('train', 'valid'))\n",
     "        return train_ds, val_ds\n",
     "    \n",
     "    def prepare_ds(self, split):\n",
-    "        tokenizer = GPT2Tokenizer.from_pretrained(self.run_params.model)\n",
-    "        tokenizer.pad_token = tokenizer.eos_token \n",
     "        split = f'{split}[:{self.run_params.batch_size if self.run_params.debug else f\"{self.run_params.data_set_percentage}%\"}]'\n",
     "        ds = load_dataset('text', data_files=self.run_params.data_files, split=split)\n",
     "        ds = ds.map(self.tokenize, batched=True, fn_kwargs={'tokenizer':tokenizer})\n",
@@ -58,7 +58,7 @@
     "\n",
     "    # Tokenize a sequence\n",
     "    def tokenize(self, x, tokenizer=None):\n",
-    "        tokens = tokenizer(\n",
+    "        tokens = self.tokenizer(\n",
     "            x['text'],\n",
     "            max_length=self.run_params.seq_length,\n",
     "            truncation=True,\n",
@@ -249,6 +249,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
