--- a/12_properties.ipynb
+++ b/12_properties.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "corrected-rough",
+   "id": "a40cb71f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "manual-attraction",
+   "id": "14359958",
    "metadata": {},
    "source": [
     "# Properties\n",
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hundred-complement",
+   "id": "f2bb85f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8509,7 +8509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "direct-generator",
+   "id": "c10e8130",
    "metadata": {},
    "source": [
     "# Testing"
@@ -8518,7 +8518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "failing-invalid",
+   "id": "fee75f39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8529,7 +8529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "verbal-trick",
+   "id": "e1c46e13",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8540,6 +8540,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
