--- a/08_database_proxy.ipynb
+++ b/08_database_proxy.ipynb
@@ -195,11 +195,12 @@
     "            entity_id = pd.read_sql_query(\n",
     "                \"SELECT * FROM Entities_{} WHERE label =  \\\"{}\\\";\".format(table_name, self.remove_quotations(label)),\n",
     "                self.conn)\n",
+    "            entities = entity_id.values.tolist()\n",
+    "            return entities\n",
     "        except Exception as e:\n",
     "            print(e)\n",
     "            self.exit_procedure()\n",
-    "        return entity_id.values.tolist()\n",
-    "\n",
+    "            \n",
     "    def get_entity_properties(self, entity_id):\n",
     "        \"\"\"\n",
     "        Search for all properties of the entity\n",
