Passing new tests

--- a/08_database_proxy.ipynb
+++ b/08_database_proxy.ipynb
@@ -277,7 +277,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<sqlite3.Connection object at 0x7f0d45be43f0>\n"
+      "<sqlite3.Connection object at 0x7f555ffd63f0>\n"
      ]
     }
    ],
@@ -299,61 +299,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<sqlite3.Connection object at 0x7f0d45be45d0>\n",
-      "Execution failed on sql 'SELECT * FROM Entities_b WHERE label =  \"Bill Gates\";': no such table: Entities_b\n",
-      "None\n"
+      "<sqlite3.Connection object at 0x7f555ffd64e0>\n",
+      "[['Q4909106', 'Bill Gates', 'American frontiersman'], ['Q1181671', 'Bill Gates', 'Wikimedia disambiguation page'], ['Q5284', 'Bill Gates', 'American business magnate and philanthropist']]\n"
      ]
     }
    ],
    "source": [
     "wiki = WikiDatabase()\n",
     "result = wiki.get_entity_by_label('Bill Gates')\n",
+    "assert result == [['Q4909106', 'Bill Gates', 'American frontiersman'], ['Q1181671', 'Bill Gates', 'Wikimedia disambiguation page'], ['Q5284', 'Bill Gates', 'American business magnate and philanthropist']], 'Query failed'\n",
     "print(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution failed on sql 'SELECT * FROM Properties_relations WHERE entity_id = \"Q5284\";': no such table: Properties_relations\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'empty'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-f55123c56b85>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mproperty_r\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mwiki\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_entity_properties\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Q5284'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwiki\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_property_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproperty_r\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mproperty_r\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-3-f9052c942f9e>\u001b[0m in \u001b[0;36mget_entity_properties\u001b[0;34m(self, entity_id)\u001b[0m\n\u001b[1;32m    158\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    159\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexit_procedure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 160\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mentity_properties\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mempty\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    161\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    162\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclean_relations\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mentity_properties\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'relations'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'empty'"
+      "('mother', 'Mary Maxwell Gates')\n",
+      "('place of birth', 'Seattle')\n",
+      "('spouse', 'Melinda Gates')\n",
+      "('occupation', 'entrepreneur')\n",
+      "('country of citizenship', 'United States of America')\n",
+      "('employer', 'Bill & Melinda Gates Foundation')\n",
+      "('educated at', 'Lakeside School')\n",
+      "(\"topic's main category\", 'Category:Bill Gates')\n",
+      "('instance of', 'human')\n",
+      "('residence', 'Medina')\n",
+      "('award received', 'Knight Commander of the Order of the British Empire')\n",
+      "('described by source', 'Lentapedia (full versions)')\n",
+      "('given name', 'William')\n",
+      "('position held', 'chief executive officer')\n",
+      "('family name', 'Gates')\n",
+      "('child', 'Jennifer Katherine Gates')\n",
+      "('ethnic group', 'Scotch-Irish Americans')\n",
+      "('member of', 'American Academy of Arts and Sciences')\n",
+      "('vehicle normally used', 'Porsche 959')\n",
+      "('languages spoken, written or signed', 'English')\n",
+      "('sex or gender', 'male')\n",
+      "('owner of', 'Microsoft')\n",
+      "('present in work', 'iSteve')\n",
+      "('writing language', 'English')\n",
+      "('sport', 'contract bridge')\n",
+      "('handedness', 'left-handedness')\n",
+      "('father', 'William H. Gates Jr.')\n",
+      "None\n",
+      "None\n",
+      "('sibling', 'Kristianne Gates')\n",
+      "('participant in', 'commencement at the Harvard University')\n"
      ]
     }
    ],
    "source": [
+    "properties = wiki.get_entity_properties(result[0][0])\n",
+    "assert properties ==  [['P31', 'Q5'], ['P735', 'Q18245781'], ['P27', 'Q30'], ['P106', 'Q43845'], ['P734', 'Q16870134'], ['P21', 'Q6581097']], 'Properties failed'\n",
     "for property_r in wiki.get_entity_properties('Q5284'): \n",
     "    print(wiki.get_property_string(property_r[0], property_r[1]))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
