Fixed `01_dataset_builder` to pass basic tests.
I also added the autoreload module to each .ipynb file.

--- a/08_database_proxy.ipynb
+++ b/08_database_proxy.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp database_proxy"
+    "# default_exp database_proxy\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -19,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,12 +176,13 @@
     "        entities_id = None\n",
     "        try:\n",
     "            entities_id = pd.read_sql_query(\n",
-    "                \"SELECT * FROM Entities_{} WHERE label  LIKE \\\"{}%\\\";\".format(table_name, self.remove_quotations(label)),\n",
-    "                self.conn)\n",
+    "                \"SELECT * FROM Entities_{} WHERE label  LIKE \\\"{}%\\\";\"\\\n",
+    "                .format(table_name, self.remove_quotations(label)), self.conn)\n",
+    "            return entities_id.values.tolist()\n",
     "        except Exception as e:\n",
     "            print(e)\n",
     "            self.exit_procedure()\n",
-    "        return entities_id.values.tolist()\n",
+    "        \n",
     "\n",
     "    def get_entity_by_label(self, label):\n",
     "        \"\"\"\n",
@@ -193,15 +196,16 @@
     "        table_name = self.get_table_name(label)\n",
     "        try:\n",
     "            entity_id = pd.read_sql_query(\n",
-    "                \"SELECT * FROM Entities_{} WHERE label =  \\\"{}\\\";\".format(table_name, self.remove_quotations(label)),\n",
-    "                self.conn)\n",
+    "                \"SELECT * FROM Entities_{} WHERE label =  \\\"{}\\\";\"\\\n",
+    "                .format(table_name, self.remove_quotations(label)), self.conn)\n",
     "            entities = entity_id.values.tolist()\n",
-    "            return entities\n",
+    "            # Return the first entity\n",
+    "            return entities[0]\n",
     "        except Exception as e:\n",
     "            print(e)\n",
     "            self.exit_procedure()\n",
     "            \n",
-    "    def get_entity_properties(self, entity_id):\n",
+    "    def get_entity_associations(self, entity_id):\n",
     "        \"\"\"\n",
     "        Search for all properties of the entity\n",
     "        Return all the\n",
@@ -256,8 +260,6 @@
     "        except Exception as e:\n",
     "            print(e)\n",
     "            self.exit_procedure()\n",
-    "        if related_entity_label is None or property_name is None:\n",
-    "            return None\n",
     "        return property_name, related_entity_label"
    ]
   },
@@ -270,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -362,9 +364,9 @@
     }
    ],
    "source": [
-    "properties = wiki.get_entity_properties(result[0][0])\n",
+    "properties = wiki.get_entity_associations(result[0][0])\n",
     "assert properties ==  [['P31', 'Q5'], ['P735', 'Q18245781'], ['P27', 'Q30'], ['P106', 'Q43845'], ['P734', 'Q16870134'], ['P21', 'Q6581097']], 'Properties failed'\n",
-    "for property_r in wiki.get_entity_properties('Q5284'): \n",
+    "for property_r in wiki.get_entity_associations('Q5284'): \n",
     "    print(wiki.get_property_string(property_r[0], property_r[1]))\n"
    ]
   }
@@ -374,18 +376,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
   }
  },
  "nbformat": 4,
