--- a/07_property_scorer.ipynb
+++ b/07_property_scorer.ipynb
@@ -7,12 +7,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp property_scorer"
+    "# default_exp property_scorer\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8ac1412d",
    "metadata": {},
    "outputs": [],
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cc864a9b",
    "metadata": {},
    "outputs": [],
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9f0bf9a6",
    "metadata": {},
    "outputs": [],
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "63e972e7",
    "metadata": {},
    "outputs": [],
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "999a721c",
    "metadata": {},
    "outputs": [
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "823974c8",
    "metadata": {},
    "outputs": [
@@ -119,7 +121,7 @@
        "{'input_ids': [14350, 318, 262, 1266, 90, 14350, 1058, 1778, 87, 92], 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "8162b188",
    "metadata": {},
    "outputs": [],
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "bd18b1d1",
    "metadata": {},
    "outputs": [],
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "3c3619e1",
    "metadata": {},
    "outputs": [
@@ -1803,7 +1805,7 @@
        "            4.5724e-01,  1.2059e-01]]]], grad_fn=<PermuteBackward>))), hidden_states=None, attentions=None, cross_attentions=None)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1815,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "d11f9447",
    "metadata": {},
    "outputs": [
@@ -1825,7 +1827,7 @@
        "torch.Size([10, 768])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1837,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "227095ab",
    "metadata": {},
    "outputs": [
@@ -1847,7 +1849,7 @@
        "torch.Size([10, 1])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1871,18 +1873,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
   }
  },
  "nbformat": 4,
