--- a/01_dataset_builder.ipynb
+++ b/01_dataset_builder.ipynb
@@ -124,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<sqlite3.Connection object at 0x7f70894d4990>\n"
+      "<sqlite3.Connection object at 0x7f6bce64fc60>\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Q2283', 'Microsoft', 'American multinational technology corporation'], ['Q4897965', 'Bethesda', 'unincorporated community in Davidson County, North Carolina']]\n"
+      "[['Q2283', 'Microsoft', 'American multinational technology corporation'], ['Q224892', 'Bethesda', 'Wikimedia disambiguation page']]\n"
      ]
     }
    ],
@@ -183,7 +183,9 @@
     "x = \"Microsoft has bought Bethesda\"\n",
     "entities = ds_builder.get_entities_in_text(x)\n",
     "print(entities)\n",
-    "assert entities == [['Q2283', 'Microsoft', 'American multinational technology corporation'], ['Q4897965', 'Bethesda', 'unincorporated community in Davidson County, North Carolina']]"
+    "assert entities == [['Q2283', 'Microsoft', 'American multinational technology corporation'],\\\n",
+    "                    ['Q224892', 'Bethesda', 'Wikimedia disambiguation page']],\\\n",
+    "                    'Error in `dataset_builder.get_entities_in_text()`'"
    ]
   },
   {
@@ -220,8 +222,15 @@
     " 'location of formation': 'Albuquerque',\n",
     " 'director / manager': 'Satya Nadella',\n",
     " 'external auditor': 'Deloitte & Touche LLP',\n",
-    " 'partnership with': 'ID2020'}"
+    " 'partnership with': 'ID2020'}, 'Error in `dataset_builder.get_entity_associations()`'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
