--- a/08_database_proxy.ipynb
+++ b/08_database_proxy.ipynb
@@ -200,11 +200,24 @@
     "                .format(table_name, self.remove_quotations(label)), self.conn)\n",
     "            entities = entity_id.values.tolist()\n",
     "            # Return the first entity\n",
+    "            entities = self._sort_entities(entities)\n",
     "            return entities[0]\n",
     "        except Exception as e:\n",
     "            print(e)\n",
     "            self.exit_procedure()\n",
     "            \n",
+    "    def _sort_entities(self, entities):\n",
+    "        \"\"\"\n",
+    "            Given a list of entities, sort the list where the lowest id number is first.\n",
+    "            \n",
+    "            We are assuming that the most likely entity is the one with the lowest id number\n",
+    "            in the knowledge base.\n",
+    "        \"\"\"\n",
+    "        # Chops off the first letter Q and casts the string as a number\n",
+    "        return sorted(entities, key=lambda x:int(x[0][1:]))\n",
+    "        \n",
+    "        \n",
+    "        \n",
     "    def get_entity_associations(self, entity_id):\n",
     "        \"\"\"\n",
     "        Search for all properties of the entity\n",
@@ -279,7 +292,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<sqlite3.Connection object at 0x7f555ffd63f0>\n"
+      "<sqlite3.Connection object at 0x7f2e005976c0>\n"
      ]
     }
    ],
@@ -308,15 +321,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<sqlite3.Connection object at 0x7f555ffd64e0>\n",
-      "[['Q4909106', 'Bill Gates', 'American frontiersman'], ['Q1181671', 'Bill Gates', 'Wikimedia disambiguation page'], ['Q5284', 'Bill Gates', 'American business magnate and philanthropist']]\n"
+      "[['Q5284', 'Bill Gates', 'American business magnate and philanthropist'], ['Q1181671', 'Bill Gates', 'Wikimedia disambiguation page'], ['Q4909106', 'Bill Gates', 'American frontiersman']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test sort\n",
+    "entities = [['Q4909106', 'Bill Gates', 'American frontiersman'], ['Q1181671', 'Bill Gates', 'Wikimedia disambiguation page'], ['Q5284', 'Bill Gates', 'American business magnate and philanthropist']]\n",
+    "entities = db._sort_entities(entities)\n",
+    "assert entities == [['Q5284', 'Bill Gates', 'American business magnate and philanthropist'], ['Q1181671', 'Bill Gates', 'Wikimedia disambiguation page'], ['Q4909106', 'Bill Gates', 'American frontiersman']],\\\n",
+    "'Errorin `_sort_entities` function in `database_proxy` class'\n",
+    "print(entities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<sqlite3.Connection object at 0x7f2e00597300>\n",
+      "['Q5284', 'Bill Gates', 'American business magnate and philanthropist']\n"
      ]
     }
    ],
    "source": [
     "wiki = WikiDatabase()\n",
     "result = wiki.get_entity_by_label('Bill Gates')\n",
-    "assert result == [['Q4909106', 'Bill Gates', 'American frontiersman'], ['Q1181671', 'Bill Gates', 'Wikimedia disambiguation page'], ['Q5284', 'Bill Gates', 'American business magnate and philanthropist']], 'Query failed'\n",
+    "# assert result == [['Q4909106', 'Bill Gates', 'American frontiersman'], ['Q1181671', 'Bill Gates', 'Wikimedia disambiguation page'], ['Q5284', 'Bill Gates', 'American business magnate and philanthropist']], 'Query failed'\n",
     "print(result)"
    ]
   },
@@ -356,19 +391,26 @@
       "('sport', 'contract bridge')\n",
       "('handedness', 'left-handedness')\n",
       "('father', 'William H. Gates Jr.')\n",
-      "None\n",
-      "None\n",
+      "('generational suffix', None)\n",
+      "('personal pronoun', None)\n",
       "('sibling', 'Kristianne Gates')\n",
       "('participant in', 'commencement at the Harvard University')\n"
      ]
     }
    ],
    "source": [
-    "properties = wiki.get_entity_associations(result[0][0])\n",
-    "assert properties ==  [['P31', 'Q5'], ['P735', 'Q18245781'], ['P27', 'Q30'], ['P106', 'Q43845'], ['P734', 'Q16870134'], ['P21', 'Q6581097']], 'Properties failed'\n",
+    "properties = wiki.get_entity_associations(result[0])\n",
+    "assert properties ==  [['P25', 'Q454928'], ['P19', 'Q5083'], ['P26', 'Q463877'], ['P106', 'Q131524'], ['P27', 'Q30'], ['P108', 'Q655286'], ['P69', 'Q7879362'], ['P910', 'Q7112419'], ['P31', 'Q5'], ['P551', 'Q1506847'], ['P166', 'Q12201445'], ['P1343', 'Q17311605'], ['P735', 'Q12344159'], ['P39', 'Q484876'], ['P734', 'Q16870134'], ['P40', 'Q23011254'], ['P172', 'Q7435494'], ['P463', 'Q463303'], ['P3438', 'Q575937'], ['P1412', 'Q1860'], ['P21', 'Q6581097'], ['P1830', 'Q2283'], ['P1441', 'Q12125162'], ['P6886', 'Q1860'], ['P641', 'Q188966'], ['P552', 'Q789447'], ['P22', 'Q684014'], ['P8017', 'L19333-F1'], ['P6553', 'L485'], ['P3373', 'Q92466067'], ['P1344', 'Q16972891']], 'Properties failed'\n",
     "for property_r in wiki.get_entity_associations('Q5284'): \n",
     "    print(wiki.get_property_string(property_r[0], property_r[1]))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
