--- a/10_insert_to_database.ipynb
+++ b/10_insert_to_database.ipynb
@@ -37,78 +37,56 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter the path to the database hello\n",
-      "Enter the path to the .txt file containing the sql statements hello\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'text_path.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-0b059a0bace7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'__main__'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m     \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-3-0b059a0bace7>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[0mdatabase_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Enter the path to the database'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[0msql_statements\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Enter the path to the .txt file containing the sql statements'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m     \u001b[0mtext_to_database\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdatabase_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msql_statements\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'__main__'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-3-0b059a0bace7>\u001b[0m in \u001b[0;36mtext_to_database\u001b[0;34m(database_path, text_path)\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mcrsr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconnection\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mcount\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'text_path.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"utf-8\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# Name of the file where you wrote wikidata to\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m             \u001b[0mline\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'text_path.txt'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#export\n",
-    "# Use if you created a text file when reading the wikidata file and now you want to insert the data to a database\n",
+    "# #export\n",
+    "# # Use if you created a text file when reading the wikidata file and now you want to insert the data to a database\n",
     "\n",
-    "def text_to_database(database_path, text_path):\n",
-    "    connection = sqlite3.connect(database_path) # Name of your database\n",
-    "    sql_query = []\n",
-    "    last_line = ''\n",
-    "    crsr = connection.cursor()\n",
-    "    count = 0\n",
-    "    with open(text_path, 'r', encoding=\"utf-8\") as file: # Name of the file where you wrote wikidata to\n",
-    "        while True:\n",
-    "            line = file.readline()\n",
-    "            if not line:\n",
-    "                break\n",
-    "            if line == '\\n':\n",
-    "                # print('Hello')\n",
-    "                # print(sql_query)\n",
-    "                file.readline()\n",
-    "                file.readline()\n",
-    "                file.readline()\n",
-    "                # sql_command = '\\\"\\\"\\\"{}\\\"\\\"\\\"'.format(sql_query)\n",
-    "                try:\n",
-    "                    if len(sql_query) < 2:\n",
-    "                        continue\n",
-    "                    if sql_query[-1][-1] == ',':\n",
-    "                        sql_query[-1] = sql_query[-1][:-1] + ';'\n",
-    "                    crsr.execute(''.join(sql_query))\n",
-    "                except Exception as e:\n",
-    "                    print(e)\n",
-    "                    for line in sql_query:\n",
-    "                        print(line, end='')\n",
-    "                    print('Something went wrong with the following ')\n",
-    "                    break\n",
-    "                    connection.commit()\n",
-    "                    sql_query.clear()\n",
+    "# def text_to_database(database_path, text_path):\n",
+    "#     connection = sqlite3.connect(database_path) # Name of your database\n",
+    "#     sql_query = []\n",
+    "#     last_line = ''\n",
+    "#     crsr = connection.cursor()\n",
+    "#     count = 0\n",
+    "#     with open(text_path, 'r', encoding=\"utf-8\") as file: # Name of the file where you wrote wikidata to\n",
+    "#         while True:\n",
+    "#             line = file.readline()\n",
+    "#             if not line:\n",
+    "#                 break\n",
+    "#             if line == '\\n':\n",
+    "#                 # print('Hello')\n",
+    "#                 # print(sql_query)\n",
+    "#                 file.readline()\n",
+    "#                 file.readline()\n",
+    "#                 file.readline()\n",
+    "#                 # sql_command = '\\\"\\\"\\\"{}\\\"\\\"\\\"'.format(sql_query)\n",
+    "#                 try:\n",
+    "#                     if len(sql_query) < 2:\n",
+    "#                         continue\n",
+    "#                     if sql_query[-1][-1] == ',':\n",
+    "#                         sql_query[-1] = sql_query[-1][:-1] + ';'\n",
+    "#                     crsr.execute(''.join(sql_query))\n",
+    "#                 except Exception as e:\n",
+    "#                     print(e)\n",
+    "#                     for line in sql_query:\n",
+    "#                         print(line, end='')\n",
+    "#                     print('Something went wrong with the following ')\n",
+    "#                     break\n",
+    "#                     connection.commit()\n",
+    "#                     sql_query.clear()\n",
     "\n",
-    "            sql_query.append(line)\n",
+    "#             sql_query.append(line)\n",
     "\n",
-    "# close the connection\n",
-    "        connection.close()\n",
+    "# # close the connection\n",
+    "#         connection.close()\n",
     "\n",
-    "def main():\n",
-    "    database_path = input('Enter the path to the database')\n",
-    "    sql_statements = input('Enter the path to the .txt file containing the sql statements')\n",
-    "    text_to_database(database_path, sql_statements)\n",
+    "# def main():\n",
+    "#     database_path = input('Enter the path to the database')\n",
+    "#     sql_statements = input('Enter the path to the .txt file containing the sql statements')\n",
+    "#     text_to_database(database_path, sql_statements)\n",
     "    \n",
-    "if __name__ == '__main__':\n",
-    "    main()"
+    "# if __name__ == '__main__':\n",
+    "#     main()"
    ]
   },
   {
